force-app/main/default/objects/Account/fields/Company_Marketing_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Marketing_Status__c</fullName>
    <label>Company Marketing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>