force-app/main/default/objects/Account/fields/Company_Revenue_MM__c.field-meta.xml
<CustomField>
    <fullName>Company_Revenue_MM__c</fullName>
    <label>Company Revenue (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>